--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A music player that uses wynk music unofficial api to play music",
 	"type": "module",
 	"scripts": {
-		"dev": "vite & npx tailwindcss -i ./src/css/styles.css -o ./src/output.css --watch",
+		"dev": "vite && npx tailwindcss -i ./src/css/styles.css -o ./dist/output.css --watch",
 		"build": "vite build",
 		"preview": "vite preview --port 9012"
 	},
@@ -22,6 +22,9 @@
 		"normalize.css": "^8.0.1"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.31",
+		"tailwindcss": "^3.3.4",
 		"typescript": "^5.2.2",
 		"vite": "^4.4.5"
 	}
